--- a/src/apps/frontend/i18n/fr/messages.xml
+++ b/src/apps/frontend/i18n/fr/messages.xml
@@ -5,7 +5,7 @@
     <header/>
     <body>
       <trans-unit id="1">
-        <source>Discographies</source>
+        <source>discographie</source>
         <target/>
       </trans-unit>
       <trans-unit id="2">
