[frontend] configurable use of feedburner links

--- a/src/apps/frontend/i18n/messages.en.xml
+++ b/src/apps/frontend/i18n/messages.en.xml
@@ -106,7 +106,7 @@
       </trans-unit>
       <trans-unit id="26">
         <source>Da ! Heard It Records : Dernières Nouvelles</source>
-        <target>Da ! Heard It Records : Latest Newss</target>
+        <target>Da ! Heard It Records : Latest News</target>
       </trans-unit>
       <trans-unit id="27">
         <source>Flux RSS des dernières nouvelles</source>
