--- a/src/apps/frontend/i18n/messages.en.xml
+++ b/src/apps/frontend/i18n/messages.en.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE xliff PUBLIC "-//XLIFF//DTD XLIFF//EN" "http://www.oasis-open.org/committees/xliff/documents/xliff.dtd">
 <xliff version="1.0">
-  <file source-language="EN" target-language="en" datatype="plaintext" original="messages" date="2012-04-20T02:28:14Z" product-name="messages">
+  <file source-language="EN" target-language="en" datatype="plaintext" original="messages" date="2014-09-26T11:12:43Z" product-name="messages">
     <header/>
     <body>
       <trans-unit id="1">
@@ -116,6 +116,59 @@
         <source>Bienvenue</source>
         <target>Welcome</target>
       </trans-unit>
+      <trans-unit id="29">
+        <source>Retourner à la liste des sorties</source>
+        <target>Back to discography</target>
+      </trans-unit>
+      <trans-unit id="30">
+        <source>Survolez l'image pour mettre le carousel en pause</source>
+        <target>Hover image to pause</target>
+      </trans-unit>
+      <trans-unit id="31">
+        <source>Chargement du player en cours. Patience :)</source>
+        <target>Player is loading. Please wait :)</target>
+      </trans-unit>
+      <trans-unit id="32">
+        <source>Télécharger librement</source>
+        <target>Download freely</target>
+      </trans-unit>
+      <trans-unit id="33">
+        <source>don</source>
+        <target>donate</target>
+      </trans-unit>
+      <trans-unit id="34">
+        <source>Acheter une copie physique</source>
+        <target>Buy a physical copy</target>
+      </trans-unit>
+      <trans-unit id="35">
+        <source>Ils en parlent</source>
+        <target>They talk about it</target>
+      </trans-unit>
+      <trans-unit id="36">
+        <source>Créé en 2006, Da ! Heard it Records est un net-label flirtant avec les musiques Toyz-Pop, Electro Trash, Chiptune, Breakcore, Techno Parodique, Electro Punk, Acid, et avec un goût prononcé pour le 8-bit et le pixel art.</source>
+        <target/>
+      </trans-unit>
+      <trans-unit id="37">
+        <source>Biographie</source>
+        <target>Biography</target>
+      </trans-unit>
+      <trans-unit id="38">
+        <source>Retourner à la liste des artistes</source>
+        <target>Back to list of artists</target>
+      </trans-unit>
+      <trans-unit id="39">
+        <source>Où le trouver ?</source>
+        <target>Where can i find it ?</target>
+      </trans-unit>
+      <trans-unit id="40">
+        <source>Toutes les sorties</source>
+        <target>All releases</target>
+      </trans-unit>
+      <trans-unit id="41">
+        <source>+ D'infos</source>
+        <target>More informations</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
+<
