[front] Wording non genré

--- a/src/apps/frontend/i18n/messages.en.xml
+++ b/src/apps/frontend/i18n/messages.en.xml
@@ -169,11 +169,11 @@
         <target>More informations</target>
       </trans-unit>
       <trans-unit id="42">
-        <source>Illustrateurs</source>
+        <source>Illustrations</source>
         <target>Illustrators</target>
       </trans-unit>
       <trans-unit id="43">
-        <source>Illustrateur</source>
+        <source>Illustration</source>
         <target>Illustrator</target>
       </trans-unit>
       <trans-unit id="44">
